backend/k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hr-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hr-api
  template:
    metadata:
      labels:
        app: hr-api
    spec:
      containers:
      - name: hr-api
        image: backend-api:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "500m"
