backend/k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hr-api-service
spec:
  type: NodePort
  selector:
    app: hr-api
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30007
