backend/k8s/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hr-api-ingress
spec:
  rules:
  - host: hr-api.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hr-api-service
            port:
              number: 80
